[package]
name = "xokdinst"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
structopt = "0.2"
directories = "1.0"
anyhow = "1.0"
lazy_static = "1.2.0"
tempfile = "3.0.7"
serde = "1.0.78"
serde_derive = "1.0.78"
serde_yaml = "0.8"
serde_json = "1.0"
tabwriter = "1.1.0"

[[bin]]
name = "xokdinst"
path = "src/xokdinst.rs"