[package]
name = "xokdinst"
license = "Apache-2.0"
description = "Wrapper for openshift-install"
keywords = ["kubernetes", "openshift"]
version = "0.8.1"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
structopt = "0.2"
directories = "1.0"
anyhow = "1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = "3.0.7"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_yaml = "0.8"
serde_json = "1.0"
sys-info = "0.5.6"
tabwriter = "1.1.0"
url = "2.1.1"

[[bin]]
name = "xokdinst"
path = "src/xokdinst.rs"
